Fix safari canvas overflow hidden bug

--- a/client/src/scss/modules/_circle.scss
+++ b/client/src/scss/modules/_circle.scss
@@ -1,4 +1,5 @@
 .circle {
+  position: relative;
   width: 80vw;
   height: 80vw;
   margin: 0 auto;
