--- a/client/src/scss/modules/_qr-code.scss
+++ b/client/src/scss/modules/_qr-code.scss
@@ -1,4 +1,5 @@
 .qr-code {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
